k8s/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: clic-kiusys-api-lb
  namespace: clic-kiusys
  annotations:
    service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "10"
spec:
  type: LoadBalancer
  selector:
    app: clic-kiusys-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
