k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clic-kiusys-api
  namespace: clic-kiusys
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: clic-kiusys-oci.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clic-kiusys-api
                port:
                  number: 80
